pxc/tests/test_42_numeric/intconst2.px
namespace intconst;
import common "";
import io::file "";

function void test1()
{
  int v = 12;
  off_t z = off_t(v); // error
  println(z);
}

test1();

